@@ -62,6 +62,7 @@
        <file>icons/16x16/mate.png</file>
        <file>icons/16x16/kde.png</file>
        <file>icons/16x16/cinnamon.png</file>
+       <file>icons/16x16/trinity.png</file>
        <file>icons/16x16/new_file.png</file>
        <file>icons/16x16/resolution.png</file>
        <file>icons/16x16/session.png</file>
