@@ -210,6 +210,7 @@ SessionWidget::SessionWidget ( bool newSession, QString id, ONMainWindow * mw,
     sessBox->addItem ( "MATE" );
     sessBox->addItem ( "UNITY" );
     sessBox->addItem ( "CINNAMON" );
+    sessBox->addItem ( "TRINITY" );
     sessBox->addItem ( tr ( "Connect to Windows terminal server" ) );
     sessBox->addItem ( tr ( "XDMCP" ) );
     sessBox->addItem ( tr ( "Connect to local desktop" ) );
