@@ -47,6 +47,8 @@ x2goclient (4.0.3.0-0x2go1) UNRELEASED; urgency=low
   * New upstream release (4.0.3.0):
     - Make X2Go Client aware of the Cinnamon (CINNAMON) desktop environment.
       (Fixes: #571)
+    - Make X2Go Client aware of the Trinity (TRINITY) desktop environment.
+      (Fixes: #609)
     - Windows: Fix not being able to add the server to the known_hosts file when
       the username has non-English characters. (Fixes: #566)
       (NOTE: This fix only works when the non-English characters are in the same
